blog-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app
  labels:
    app: blog-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-app
  template:
    metadata:
      labels:
        app: blog-app
    spec:
      containers:
      - name: blog-app
        image: nikhileshnike/node-blog:1.3
        readinessProbe:
          httpGet:
            path: /status
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        ports:
        - containerPort: 4000
        resources:
          limits:
            memory: "512Mi"
            cpu: "0.5"
---

apiVersion: v1
kind: Service
metadata:
  name: blog-app
spec:
  type: NodePort
  selector:
    app: blog-app
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 30100
