ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
spec:
  ingressClassName: nginx
  rules:
  - host: blog.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-app
            port:
              number: 4000
